Comitar implementações do projeto

--- a/projeto-final/inderx.html
+++ b/projeto-final/inderx.html
@@ -42,5 +42,46 @@
             <a href="#">GitHub</a>
         </div>
     </header>
+    <main class="container">
+        <div class="card-container">
+            <div class="card-text">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia aliquam sequi, repudiandae voluptates eos perferendis error delectus a explicabo quam excepturi consequatur tenetur sed totam, laboriosam dignissimos inventore? Amet, animi?
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum numquam illo, enim aspernatur possimus doloribus laboriosam, mollitia laudantium reprehenderit iste odit, inventore nam non! Beatae ea voluptatum debitis nemo dolor.
+            </div>
+            <div class="card">
+                <div class="card-wrapper">
+                    <h2>GitHub</h2>
+                    <p>Veja meus projetos</p>
+                </div>
+            </div>
+        </div>
+        <div class="card-container">
+            <div class="card">
+                <div class="card-wrapper">
+                    <h2>Linkedin</h2>
+                    <p>Acompanhe minha carreira</p>
+                </div>
+            </div>
+            <div class="card-text">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia aliquam sequi, repudiandae voluptates eos perferendis error delectus a explicabo quam excepturi consequatur tenetur sed totam, laboriosam dignissimos inventore? Amet, animi?
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum numquam illo, enim aspernatur possimus doloribus laboriosam, mollitia laudantium reprehenderit iste odit, inventore nam non! Beatae ea voluptatum debitis nemo dolor.
+            </div>
+        </div>
+        <div class="card-container">
+            <div class="card-text">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia aliquam sequi, repudiandae voluptates eos perferendis error delectus a explicabo quam excepturi consequatur tenetur sed totam, laboriosam dignissimos inventore? Amet, animi?
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum numquam illo, enim aspernatur possimus doloribus laboriosam, mollitia laudantium reprehenderit iste odit, inventore nam non! Beatae ea voluptatum debitis nemo dolor.
+            </div>
+            <div class="card">
+                <div class="card-wrapper">
+                    <h2>Instagram</h2>
+                    <p>Ou mais do meu dia-a-dia</p>
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer class="footer">
+        Feito por Douglas Elias Pereira
+    </footer>
 </body>
 </html>
